# project-deep-research-agent

./: .gitignore  README.md
bash/: install_temporal.sh  run_elasticsearch.sh
data/: -Gj7SaI-QW4.txt
notes/: Notes_workshop.md
src/flow/: 1-extract-video-transcripts.ipynb  2-agent.ipynb  activities.py  create_index.py  main.py  pyproject.toml  worker.py  worker_base.py  workflow.py
