[project]
name = "flow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "elasticsearch>=9.2.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "temporalio>=1.20.0",
    "tqdm>=4.67.1",
    "youtube-transcript-api>=1.2.3",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
